samples/errors/func-type-unresolvable.stkn
mediate_call(unresolvable, false)

func unresolvable(x)
    ifnot x
        return unresolvable(!x)
    return unresolvable(false)

func mediate_call(a, b)
    return a(b)
